[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/HyperspaceBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Western for the game.mp3" type="AudioStream" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -200.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Welcome to MEME Destroyer"
align = 1
valign = 1
uppercase = true

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -17.479
autoplay = true

[connection signal="focus_entered" from="." to="." method="_on_Main_Menu_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Main_Menu_focus_exited"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
